design: add style for free transport

--- a/assets/styles/frontend/common/components/in/action.less
+++ b/assets/styles/frontend/common/components/in/action.less
@@ -44,10 +44,12 @@
 
         @media @query-lg {
             margin-bottom: 0;
+            width: 260px;
         }
 
         @media @query-vl {
             position: absolute;
+            width: auto;
             left: 50%;
             transform: translateX(-50%) translateY(-50%);
             top: 50%;
