--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -169,8 +169,8 @@
                         {% if isPaymentAndTransportFree %}
                             {{ 'Výborně, od nás máte'|trans }}&nbsp;<span class="in-action__free-transport__colored-text">{{ 'dopravu zdarma!'|trans }}</span>
                         {% else %}
-                            {{ 'Nakupte ještě za'|trans }}&nbsp;<span class="in-free-transport__title__price">{{ remainingPriceWithVat|price }}</span>&nbsp;{{ 'a máte'|trans }}
-                            <br> <span class="in-free-transport__title__important">{{ 'dopravu zdarma!'|trans }}</span>
+                            {{ 'Nakupte ještě za'|trans }}&nbsp;<span class="in-action__free-transport__colored-text">{{ remainingPriceWithVat|price }}</span>&nbsp;{{ 'a máte'|trans }}&nbsp;
+                            <span class="in-action__free-transport__colored-text">{{ 'dopravu zdarma!'|trans }}</span>
                         {% endif %}
                     </div>
                 {% endif %}
