--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -5,7 +5,7 @@
     {% endif %}
 
     {% if type == 'large' %}
-        <div class="box-detail-add__action js-spinbox-parent">
+        <div class="box-detail-add__action js-spinbox-parent js-maximum-amount-container">
             <div class="box-detail-add__action__message in-message in-message--warning js-maximum-amount-warning display-none">
                 {{ 'Větší množství není možné nakoupit'|trans }}
             </div>
