design: edit text align on mobile

--- a/assets/styles/frontend/common/components/in/action.less
+++ b/assets/styles/frontend/common/components/in/action.less
@@ -41,10 +41,12 @@
         font-size: @font-size-small;
         background-color: lighten(@color-green, 50%);
         border-radius: @radius;
+        text-align: center;
 
         @media @query-lg {
             margin-bottom: 0;
             width: 260px;
+            text-align: left;
         }
 
         @media @query-vl {
