--- a/assets/styles/frontend/common/layout/footer.less
+++ b/assets/styles/frontend/common/layout/footer.less
@@ -28,6 +28,7 @@
         left: 0;
         top: 0;
         transform: translateY(-50%);
+        z-index: @z-index-above;
 
         &__button-icon {
             transform: rotate(180deg);
