design: fix some issues after rebase

--- a/assets/styles/frontend/common/components/list/order-gifts.less
+++ b/assets/styles/frontend/common/components/list/order-gifts.less
@@ -104,14 +104,19 @@
             }
 
             .input-label {
+                position: static;
                 padding-right: 0;
                 cursor: pointer;
+
+                font-family: @font-base;
+                font-size: @font-size;
             }
         }
     }
 }
 
 .list-order-gifts-title {
+    position: static;
     width: 100%;
     line-height: 42px;
     margin-bottom: 20px;
