[TF-548] fix design issues

--- a/assets/styles/frontend/common/components/box/price-slider.less
+++ b/assets/styles/frontend/common/components/box/price-slider.less
@@ -27,15 +27,16 @@
             }
 
             input {
-                padding-right: 3px;
-                padding-left: 3px;
+                padding: 0 3px;
                 text-align: center;
                 width: @box-price-slider-form-input-width;
                 max-width: @box-price-slider-form-input-width;
                 height: @box-price-slider-form-input-height;
                 
-                font-size: @font-size-small;
-                font-weight: 400;
+                font-size: @font-size;
+                font-family: @font-base;
+                font-weight: 500;
+                box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
 
                 &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
                     color: @color-base;
