--- a/assets/styles/frontend/common/components/in/message.less
+++ b/assets/styles/frontend/common/components/in/message.less
@@ -14,6 +14,7 @@
 .in-message {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     padding: @in-message-bottom-padding;
     margin-bottom: @in-message-bottom-gap;
     line-height: 24px;
