Products can now have files attached to them.

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -256,6 +256,7 @@
                                     </div>
                                 </div>
                             </div>
+                            {{ boxTabsMacro.files(product) }}
                         {% endif %}
                     </div>
                 </div>
