--- a/assets/styles/frontend/common/components/table/cart-preview.less
+++ b/assets/styles/frontend/common/components/table/cart-preview.less
@@ -7,8 +7,7 @@
     }
 
     &__cell {
-        font-size: @font-size + 1px;
-        font-family: @font-alt;
+        font-size: @font-size;
 
         &--price {
             padding-left: 5px;
