--- a/assets/styles/frontend/common/layout/footer.less
+++ b/assets/styles/frontend/common/layout/footer.less
@@ -425,10 +425,12 @@
         position: relative;
         padding: 50px 0;
         margin-bottom: 43px;
+        margin-top: 40px;
 
         @media @query-lg {
             padding: 70px 0;
             margin-bottom: 106px;
+            margin-top: 70px;
         }
 
         &:before {
