Added exception throws to all methods in Product that work with stocks to make sure main variant doesn't incorrectly use its own stocks.

--- a/templates/Front/Content/Product/productAvailabilityMacro.html.twig
+++ b/templates/Front/Content/Product/productAvailabilityMacro.html.twig
@@ -1,6 +1,10 @@
 {% macro productAvailability(product) %}
-{% import 'Front/Content/Product/saleStockQuantityMacro.html.twig' as saleStockQuantity %}
-    {% if product.inAnySaleStock and not product.sellingDenied %}
+    {% import 'Front/Content/Product/saleStockQuantityMacro.html.twig' as saleStockQuantity %}
+    {% if product.isMainVariant %}
+        <span class="in-availability__date">
+            {{ 'Dostupnost dle varianty'|trans }}
+        </span>
+    {% elseif product.inAnySaleStock and not product.sellingDenied %}
         <span class="in-availability__date">
             {{ saleStockQuantity.showInfo(product.realSaleStocksQuantity, product.unit.name) }}
         </span>
