[TF-552] Add internal note to orders pohoda xml

--- a/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Order/orders.xml.twig
@@ -98,7 +98,7 @@
                     <typ:ids></typ:ids>
                 </ord:centre>
                 <ord:note></ord:note>
-                <ord:intNote></ord:intNote>
+                <ord:intNote>{{ pohodaOrder.internalNote }}</ord:intNote>
                 <ord:parameters>
                     {% if pohodaOrder.pohodaTransportId is not null -%}
                         <typ:parameter>
